# libphorward

./: .gitattributes  .gitignore  .hgignore  .hgtags  .travis.sh  .travis.yml  AllSystemsGo  CHANGELOG  CHANGELOG.md  CHANGES  CMakeLists.txt  DIST.Version  Install.inc  LICENSE  Make.inc  Makefile  Makefile.am  Makefile.gnu  Makefile.in  Profile  README  README.md  SConstruct  Setenv  TODO.md  Version  aclocal.m4  configure  configure.ac  phorward.1.man  phorward.man  phorward.sln  phorward.t2t  readme.rst  standalone.sh  test.c
DEMO/: Makefile  Makefile.am  Makefile.gnu  Makefile.in  basis.c  basis_demo.vcproj  bnf.syn  lex.c  ne.syn  nregex.c  parse.c  plex-to-dot.c  pparse.c  regex.c  regex_demo.vcproj  testvm.c
DEMO/gram/: e.syn  e1.syn  e2.syn  e3.syn  e4.syn  ll.syn  llr.syn  lrec.syn  rrec.syn  self.syn
NEWPROJECT/: Makefile  main.c  proto.h
doc/: Makefile  README.md  array.t2t  ccl.t2t  codestyle.c  doc.css  example.c  foundation_libraries.odg  list.t2t  misc.t2t  parse.t2t  pggrammar.uxf  phorward.css  phorward.html  phorward.md  phorward.t2t  phorward.txt  pregex.uxf  prism.css  prism.js  readme.hdr  readme.t2t  ref.css  ref.t2t  regex.t2t
doc/tpl/html/: document.tpl  module.tpl  parameter.tpl  refentry.tpl  returns.tpl
doc/tpl/new/: function.tpl  parameter.tpl  returns.tpl
doc/tpl/t2t/: document.tpl  function.tpl  parameter.tpl  returns.tpl
examples/: Makefile.am  Makefile.gnu  Makefile.in  lexing.c  parsing.c  regex.c
examples/grammars/: json.bnf
include/: DIST.Make.inc  DIST.Make.inc.win  Make.inc  config.h.in  phorward.h
min_lalr1/: Makefile  Makefile.am  Makefile.in  min_lalr1.c  min_lalr1.vcproj
packaging/arch/: .SRCINFO  PKGBUILD
run/: .phorward  Makefile  Makefile.am  Makefile.in  cproto_all  cproto_all.bat  dmake  dmake.bat  dos_to_unix  dos_to_unix.bat  filehead  gendoc.awk  lincl  lincl.bat  mkdoc.awk  mkproto  newfile  pbuild  pconfigure  pdbgmake  pdoc  pdostounix  phelp  pinclude  ppp  ppp.bat  pproto  premcomments  psetup  psh  ptest  rem_comments  sccs2hg  text_to_c
src/: Makefile  Makefile.am  Makefile.gnu  Makefile.in  SConscript  array.c  boolean.h  ccl.c  ccl.h  dbg.h  gexpr.c  libphorward.vcproj  list.c  lltest.c  lrtest.c  makeall  memory.c  phorward.h  phorward.tpl.h  proto.h  ptest.c  version.h
src/DEMO/: Makefile  basis.c  regex.c  string.c
src/NEWPROJECT/: Makefile  main.c  proto.h
src/any/: any.c  any.conv.c  any.gen.awk  any.get.c  any.h  any.print.c  any.set.c
src/base/: array.c  array.h  bitset.c  bitset.h  ccl.c  ccl.h  dbg.c  dbg.h  hashtab.c  hashtab.h  list.c  list.h  llist.c  llist.h  memory.c  plist.c  plist.h  stack.c  stack.h  system.c
src/ccl/: ccl.c  ccl.h
src/grammar/: ast.c  astnode.c  asttype.c  bnf.c  bnfgen.h  error.c  grammar.c  grammar.h  nonterm.c  prod.c  production.c  symbol.c  term.c  terminal.c  token.c
src/grammar/bnf/: Makefile  bnf  csv2pg.awk
src/input/: input.c  input.h
src/lexer/: lexer.c  lexer.h
src/min_lalr1/: Makefile  min_lalr1.c
src/parse/: Makefile  ast.c  bnf.c  bnf.syn  comp.c  comp.gram.c  comp.gram.tpl  e.syn  e2.syn  e3.syn  gram.c  gram.syn  gram_stuff.c  ll.c  ll.syn  lr.c  main.c  mygram.c  mygram.tpl.c  parse.c  parse.h  pbnf.c  prod.c  scan.c  sym.c
src/parser/: error.c  grammar.c  grammar.h  ll.gen.c  ll.h  ll.parse.c  local.h  lr.c  lr.gen.c  lr.h  lr.parse.c  nonterm.c  parser.c  parser.h  pggrammar.uxf  production.c  symbol.c  terminal.c
src/pbasis/: Makefile  base64.c  bitset.c  bitset.h  ccl.c  ccl.h  convert.c  dbg.c  dbg.h  hashtab.c  hashtab.h  llist.c  llist.h  pbasis.h  pbasis.proto.h  stack.c  stack.h  string.c  string.h  system.c  utf8.c  utf8.h  util.c  var.c  var.gen.awk  var.h  xml.c  xml.h
src/phorward/: Makefile  Makefile.am  Makefile.in  base64.c  bitset.c  bitset.h  ccl.c  ccl.h  convert.c  dbg.c  dbg.h  hashtab.c  hashtab.h  llist.c  llist.h  memory.c  phorward.h  proto.h  stack.c  stack.h  string.c  string.h  system.c  utf8.c  utf8.h  util.c  var.c  var.conv.c  var.gen.awk  var.get.c  var.h  var.set.c  xml.c  xml.h
src/phorward/base/: bitset.h  dbg.c  hashtab.c  llist.c  memory.c  stack.c
src/phorward/ccl/: ccl.c
src/phorward/regex/: comp.c  dfa.c  direct.c  misc.c  nfa.c  pattern.c  ref.c  regex.h  util.c
src/phorward/string/: get.c  local.h  pstring.c  set.c  string.c  string.h  utf8.c  util.c
src/phorward/util/: system.c
src/phorward/variant/: var.c  var.conv.c  var.get.c  var.h  var.set.c
src/pregex/: Makefile  comp.c  dfa.c  direct.c  nfa.c  pregex.h  pregex.proto.h  pregex.sproto.h  ref.c  util.c
src/pstring/: Makefile  get.c  local.h  pstring.c  pstring.h  pstring.proto.h  set.c  util.c
src/regex/: Makefile  ccl.c  comp.c  dfa.c  direct.c  lex.c  misc.c  nccl.c  nfa.c  pattern.c  pregex.c  pregex.h  ptn.c  range.c  ref.c  regex.c  regex.h
src/string/: convert.c  string.c  string.h  utf8.c  utf8.h
src/union/: union.c  union.conv.c  union.gen.awk  union.get.c  union.h  union.set.c
src/util/: base64.c  system.c  xml.c  xml.h
src/value/: convert.c  value.c  value.conv.c  value.gen.awk  value.get.c  value.h  value.set.c
src/variant/: var.c  var.conv.c  var.gen.awk  var.get.c  var.h  var.set.c
src/vm/: prog.c  run.c  vm.c  vm.h
src/xml/: xml.c  xml.h
src/yalr/: Makefile  yalr.c
tests/: Makefile  getopt.c  lrrd.c  pushparse.c  rd.c  rdrun.h  test_ccl.c  test_plex.c  test_plexctx.c
tools/: Makefile  Makefile.am  Makefile.gnu  Makefile.in  local.h  plex.c  pparse.c  ppgram2c.c  pregex.c  pvm.c  util.c
tpl/: document.tpl  function.tpl  refentry.tpl
