# -MAKEFILE---------------------------------------------------------------------
# Phorward Foundation Toolkit
# Copyright (C) 2006-2017 by Phorward Software Technologies, Jan Max Meyer
# http://www.phorward-software.com ++ contact<at>phorward<dash>software<dot>com
# All rights reserved. See LICENSE for more information.
#
# File:		Makefile.am
# Usage:	Automake makefile.
# ------------------------------------------------------------------------------

AUTOMAKE_OPTIONS = foreign

SUBDIRS = src tools

phorwarddir = $(datadir)/phorward
dist_phorward_DATA = LICENSE README.md CHANGELOG.md doc/phorward.html doc/phorward.css doc/phorward.png doc/prism.css doc/prism.js

