# -MAKEFILE---------------------------------------------------------------------
# Phorward C/C++ Library
# Copyright (C) 2006-2019 by Phorward Software Technologies, Jan Max Meyer
# https://phorward.info ++ contact<at>phorward<dash>software<dot>com
# All rights reserved. See LICENSE for more information.
#
# File:		Makefile.am
# Usage:	Automake makefile.
# ------------------------------------------------------------------------------

AUTOMAKE_OPTIONS = foreign

SUBDIRS = src tools run examples

phorwarddir = $(datadir)/phorward
dist_phorward_DATA = LICENSE README.md CHANGELOG.md doc/phorward.html doc/phorward.css doc/phorward.png doc/prism.css doc/prism.js examples/*.c

