
noinst_PROGRAMS = basis$(EXEEXT) regex$(EXEEXT) parse$(EXEEXT)

basis_SOURCES = basis.c
basis_LDADD = ../src/libphorward.la
basis_CFLAGS = -I$(top_srcdir)/src

regex_SOURCES = regex.c
regex_LDADD = ../src/libphorward.la
regex_CFLAGS = -I$(top_srcdir)/src

parse_SOURCES = parse.c
parse_LDADD = ../src/libphorward.la
parse_CFLAGS = -I$(top_srcdir)/src
