
noinst_PROGRAMS = 	lexing$(EXEEXT) parsing$(EXEEXT) regex$(EXEEXT)

lexing_SOURCES = lexing.c
lexing_LDADD = ../src/libphorward.la
lexing_CFLAGS = -I$(top_srcdir)/src

parsing_SOURCES = parsing.c
parsing_LDADD = ../src/libphorward.la
parsing_CFLAGS = -I$(top_srcdir)/src

regex_SOURCES = regex.c
regex_LDADD = ../src/libphorward.la
regex_CFLAGS = -I$(top_srcdir)/src

