
bin_PROGRAMS = 	plex$(EXEEXT) pparse$(EXEEXT) pregex$(EXEEXT) ppgram2c$(EXEEXT)
#pvm$(EXEEXT)

plex_SOURCES = plex.c util.c
plex_LDADD = ../src/libphorward.la
plex_CFLAGS = -I$(top_srcdir)/src

pparse_SOURCES = pparse.c util.c
pparse_LDADD = ../src/libphorward.la
pparse_CFLAGS = -I$(top_srcdir)/src

pregex_SOURCES = pregex.c util.c
pregex_LDADD = ../src/libphorward.la
pregex_CFLAGS = -I$(top_srcdir)/src

ppgram2c_SOURCES = ppgram2c.c util.c
ppgram2c_LDADD = ../src/libphorward.la
ppgram2c_CFLAGS = -I$(top_srcdir)/src

#pvm_SOURCES = pvm.c
#pvm_LDADD = ../src/libphorward.la
#pvm_CFLAGS = -I$(top_srcdir)/src

